# FabriCare

./: .gitignore  Authors  README.md
.github/workflows/: ci.yml
Backend/api/: app.py  auth.py  decorators.py  errors.py  models.py  products.py
backend/: .env  .env.example  .flaskenv  .gitignore  Dockerfile  boot.sh  config.py  payment_session_response.txt  procedures.txt  pyproject.toml  render.sh  requirements.in  requirements.txt  sweet.db  sweet.py
backend/api/: __init__.py  app.py  artists.py  auth.py  carts.py  dates.py  decorators.py  errors.py  fakes.py  limiter.py  models.py  orders.py  products.py  redis.py  schemas.py  tokens.py  users.py  utilities.py
backend/api/templates/: base.html
backend/api/templates/email/: reset_password.html  reset_password.txt
backend/migrations/versions/: 0613b3787d0b_instantiate.py  8d4e02586ff3_instantiate_db.py  e541e475e1ed_start.py
frontend/: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.default.conf  package-lock.json  package.json
frontend/public/js/: utilities.js
frontend/src/: App.jsx  SweetLatexApiClient.jsx
frontend/src/Components/: Archive.jsx  Body.jsx  Carousel.jsx  CarouselTest.jsx  ClothCard.jsx  FlashMessage.jsx  Header.jsx  InputTypes.jsx  NavBar.jsx  OldNavBar.jsx  PrivateRoute.jsx  ProgressBar.jsx  PublicRoute.jsx  Sale.jsx  Tables.jsx  ViewSaleButton.jsx
frontend/src/Contexts/: ApiProvider.jsx  ArtistProvider.jsx  CartProvider.jsx  FlashProvider.jsx  OrderProvider.jsx  ProductProvider.jsx  ProviderStore.jsx  UserProvider.jsx
(+16 files in other folders)
